--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  background-color: #0f172a;
+  background-color: black;
   color: #ffffff;
   position: relative;
   margin-top: auto;
